WebCore:

2008-06-19  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Oliver.

        <https://bugs.webkit.org/show_bug.cgi?id=16049>
        execCommand('backColor') fails on collapsed selections

        * editing/EditorCommand.cpp:
        (WebCore::CommandEntry::): Enable BackColor for caret selections, and
        disable ForeColor in plaintext-only regions.

LayoutTests:

2008-06-19  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Oliver.

        <https://bugs.webkit.org/show_bug.cgi?id=16049>
        execCommand('backColor') fails on collapsed selections

        * editing/execCommand/16049-expected.txt: Added.
        * editing/execCommand/16049.html: Added.



Canonical link: https://commits.webkit.org/27130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34682 268f45cc-cd09-0410-ab3c-d52691b4dbfc